feat: updated api (#22)
* feat: updated api

* fix: test
